# arrakis

./: .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  demo.ipynb  main.py  pyproject.toml  test_graphs.py  test_new_model.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
arrakis/src/bench/: base_bench.py
arrakis/src/core_arrakis/: activation_cache.py  attention_head_comp.py  attention_tools.py  base_interpret.py  causal_tracing_intervention.py  factored_matrix.py  feature_viz.py  kg_extractor.py  knowledge_prober.py  logit_attribution.py  logit_lens.py  model_surgery.py  read_write_heads.py  residual_decomposer.py  residual_tools.py  sparsity_analyzer.py  superposition_disentangler.py
arrakis/src/graph/: base_graph.py
docs/: AttentionTools.md  CausalTracingIntervention.md  KnowledgeProber.md  LogitLens.md  ModelSurgery.md  README.md  ReadWriteHeads.md  SparsityAnalyzer.md  SuperpositionDisentangler.md  conf.py  index.rst
docs/_build/doctrees/: AttentionHeadComposition.doctree  AttentionTools.doctree  CausalTracingIntervention.doctree  FeatureVisualization.doctree  KnowledgeGraphExtractor.doctree  KnowledgeProber.doctree  LogitAttribution.doctree  LogitLens.doctree  ModelSurgery.doctree  README.doctree  ReadWriteHeads.doctree  ResidualDecomposer.doctree  ResidualTools.doctree  SparsityAnalyzer.doctree  SuperpositionDisentangler.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  AttentionHeadComposition.html  AttentionTools.html  LogitLens.html  (+18 more)
future/: cli_parser.py  multirun_test.py
tests/: test_activation_cache.py
(+19 files in other folders)
